Fix body overflow on Windows

--- a/_sass/mefody/_base.scss
+++ b/_sass/mefody/_base.scss
@@ -18,6 +18,7 @@ body {
   -webkit-text-size-adjust: 100%;
   font-feature-settings: "kern" 1;
   font-kerning: normal;
+  overflow-x: hidden;
 }
 
 
